api-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:  
  name: api-deploy
  labels:    
    app: api
spec:  
  replicas: 1  
  selector:    
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec: 
     containers:
      - name: nginx
        image: registry.digitalocean.com/wml-cr/nginx-docker:latest
        ports:
        - containerPort: 80
      - name: api
        image: registry.digitalocean.com/wml-cr/py-docker:latest
        # resources:
        #   requests:
        #     memory: "64Mi"
        #     cpu: "250m"
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        ports:
        - containerPort: 8000
