ui-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:  
  name: ui-node-deploy
  namespace: default 
  labels:    
    app: ui-node
spec:  
  replicas: 1  
  selector:    
    matchLabels:
      app: ui-node
  template:
    metadata:
      labels:
        app: ui-node
    spec: 
     containers:
      - name: ui-node
        image: registry.digitalocean.com/wml-cr/nextjs-docker:latest
        ports:
        - containerPort: 3000
    #     volumeMounts:
    #     - name: ui-env-configmap-vol
    #       mountPath: /
    #        subPath: .env.production
    #       readOnly: true
    #  volumes:
    #  - name: ui-env-configmap-vol
    #    configMap:
    #      name: ui-env-configmap
