ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-node-service
  namespace: default
  labels:
    app: ui-node
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: ui-node
