app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod-cluster-issuer"  
spec:
  tls:
  - hosts:
    - ui.chaitan.live
    - api.chaitan.live
    secretName: nodejs-tls

  rules:
  - host: "api.chaitan.live"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: api-service
            port:
              number: 8000
  - host: "ui.chaitan.live"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ui-node-service
            port:
              number: 3000
